--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </header>
     <main class="main">
-        <!-- <video class="main__logo" src="./videos/Edit.mp4"  autoplay></video> -->
-        <img src="./images/googlelogo.png" class="main__logo" alt="" />
+        <video class="main__logo" src="./videos/Edit.mp4" autoplay loop></video>
+        <!-- <img src="./images/googlelogo.png" class="main__logo" alt="" /> -->
         <div class="main__search-bar">
             <img src="./images/magnifying_glass.jpg" class="main__search-bar--magnifier" alt="" />
             <input type="search" name="" class="main__search-bar--input" id="form-search" />
